--- a/amazon-trust-extension/manifest.json
+++ b/amazon-trust-extension/manifest.json
@@ -32,21 +32,21 @@
     "default_popup": "popup.html",
     "default_title": "ClearCart - Amazon Trust Scores",
     "default_icon": {
-      "16": "icons/icon-16.png",
-      "32": "icons/icon-32.png",
-      "48": "icons/icon-48.png",
-      "128": "icons/icon-128.png"
+      "16": "icons/clearcart-16.png",
+      "32": "icons/clearcart-32.png",
+      "48": "icons/clearcart-48.png",
+      "128": "icons/clearcart-128.png"
     }
   },
   "icons": {
-    "16": "icons/icon-16.png",
-    "32": "icons/icon-32.png",
-    "48": "icons/icon-48.png",
-    "128": "icons/icon-128.png"
+    "16": "icons/clearcart-16.png",
+    "32": "icons/clearcart-32.png",
+    "48": "icons/clearcart-48.png",
+    "128": "icons/clearcart-128.png"
   },
   "web_accessible_resources": [
     {
-      "resources": ["trust-ui.html", "trust-ui.js"],
+      "resources": ["trust-ui.html", "trust-ui.js", "ClearCartIcon-original.png"],
       "matches": ["*://*.amazon.com/*"]
     }
   ]
